--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -55,6 +55,25 @@
         </div>
       </div>
 
+      <div class="user-social">
+        <div class="user-location">
+          <img src="/starter-code/assets/icon-location.svg" alt="">
+          <p class="location-header">Location</p>
+        </div>
+        <div class="user-twitter">
+          <img src="/starter-code/assets/icon-twitter.svg" alt="">
+          <p class="twitter-header"></p>
+        </div>
+        <div class="user-website">
+          <img src="/starter-code/assets/icon-website.svg" alt="">
+          <p class="website-header">Website</p>
+        </div>
+        <div class="user-company">
+          <img src="/starter-code/assets/icon-company.svg" alt="">
+          <p class="company-header">Company</p>
+        </div>  
+      </div>
+
     </div>
   </div>
 
