--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="starter-code/css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Devfinder</title>
 </head>
@@ -55,6 +55,6 @@
       </ul>
     </div>
   </section>
-  <script src="./javascript/script.js"></script>
+  <script src="starter-code/javascript/script.js"></script>
 </body>
 </html>
