fixed issue that was causing avatar to not show in mobile size screens

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
     <div class="profile">
       <div class="user-profile">
-        <img  id="avatar" src="" alt="Avatar" class="user-avatar">
+        <img  id="avatar" src="" alt="" class="user-avatar">
         <span class="profile-name" id="name"></span>
         <span class="profile-username" id="username"><a href="#"></a></span>
         <span class="profile-date" id="date"></span>
